cargo-features = ["edition"]

[package]
name = "yew-geolocation"
version = "0.1.0"
authors = ["Boscop"]
edition = '2018'

[dependencies]
yew = { git = 'https://github.com/DenisKolodin/yew', rev = '7e921ff' }
stdweb = "0.4"
stdweb-derive = "0.4"
serde = "1.0"
serde_derive = "1.0"
smart-default = "0.2"
derive-new = "0.5"
