[package]
name = "yew-geolocation"
version = "0.1.0"
authors = ["Boscop"]
edition = '2018'

[dependencies]
yew = { git = 'https://github.com/DenisKolodin/yew', rev = '5e6a8af' }
stdweb = "0.4"
serde = "1.0"
serde_derive = "1.0"
smart-default = "0.2"
wasm-bindgen = "0.2"

[dev-dependencies]
derive-new = "0.5"
failure = "0.1"
